[Web] 加入連線字串

--- a/Detector.Web/appsettings.json
+++ b/Detector.Web/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database":  ""
+    "Database": "Server=tcp:johnsonsqlsever.database.windows.net,1433;Initial Catalog=detector;Persist Security Info=False;User ID=johnson;Password=P@ssw0rd1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
